
Updated completer and autosuggester of cli_search() prompt.
Added validator/bottom toolbar to cli_search() prompt.

I have not idea how to pytest the bottom toolbar nor the
auto-completions/auto-suggestions.


*****  Mon Dec 30 09:09:56 CLT 2019  *****

Added pdf_dir config parameter where to store PDF files.
Create u.HOME/pdf/ folder on bm.init() call (default dir for PDFs).
Updated and added tests.


*****  Tue Dec 31 14:23:32 CLT 2019  *****

Modified u.get_authors() 'ushort' format to trim out every character
except letters, spaces, dashes, non-ascii, and parentheses.
Added tests.

*****

Added pdf_manager module.
Implemented pm.guess_name() function.
Tested and documented.

*****

Implemented pm.open() function to open PDF files.
Added tests (Except for when open actually works).

*****

Implemented pm.request_ads() function to request a PDF from ADS.
Documented and tested.
Added mock_webbrowser() fixture into conftest.py and added new
requests_mock entries.


*****  Wed Jan  1 01:21:14 CLT 2020  *****

Changed query argument of pm.guess_name() function to arxiv Bool.
Updated docstrings and tests accordingly.
Fixed docstring of pm.request_ads() function.

*****

Implemented pm.add_ads_request() function to add requested PDF into
the database.
Documented and tested.

*****

Implemented bm.find() function to get an specific entry.
Documented and tested.

*****

Cleaned up a couple tests in tests_bib_manager.py.

*****

Tweaked pm.open() and pm.add_ads_request() functions with bm.find()
Enabled bibcode argument for pm.open().
Updated tests and docstring.

*****

Implemented pm.fetch() function.
This is the high-level function to fetch PDF files from ADS.
Tested and documented.
Updated conftest.py with mock requests.

*****

Implemented cli_fetch() function.
Added fetch_keyword variable to utils.py
Tested.
Need to implement docs for PDF manager module.

*****

Fixed typo querry -> query.
Added to FAQs: UnicodeEncodeError when running over ssh.
